--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,7 +9,7 @@
   display: grid;
   grid-template-rows: 20px 1fr 20px;
   align-items: center;
-  justify-items: center;
+  justify-items: clearcenter;
   min-height: 100svh;
   padding: 80px;
   gap: 64px;
@@ -68,10 +68,7 @@
   padding: 0 20px;
   border: none;
   border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
+  transition: background 0.2s, color 0.2s, border-color 0.2s;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -162,7 +159,7 @@ a.secondary {
 }
 
 @media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+  /* // .logo {
+  //   filter: invert();
+  // } */
 }
