--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,13 +1,4 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 html,
@@ -23,6 +14,20 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+th .fc-datagrid-cell-main {
+  display: none;
+}
+// .fc .fc-timeline-event-harness .fc-event {
+//   // margin-top: 5px;
+//   margin-left: 65px;
+//   margin-right: 65px;
+//   border-radius: 15px;
+// }
+
+// .fc .fc-timeline-events {
+//   display: flex;
+//   align-items: center;
+// }
 
 * {
   box-sizing: border-box;
@@ -33,10 +38,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
