--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,3 +3,39 @@
   justify-content: center;
   align-items: center;
 }
+.header {
+  display: block;
+  width: 100%;
+}
+.container {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+
+  justify-content: center;
+  align-items: center;
+
+  & h1 {
+    display: block;
+    width: 100%;
+    flex-basis: 100%;
+    text-align: center;
+    margin: 1rem;
+  }
+}
+
+.box {
+  // flex: 1 1 300px;
+  width: 300px;
+  height: 300px;
+  // background-color: lightgray;
+  border-radius: 15px;
+  box-shadow: 0px 0px 23px -5px rgba(66, 68, 90, 1);
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  font-size: larger;
+}
