--- a/src/components/SideBar/Sidebar.module.scss
+++ b/src/components/SideBar/Sidebar.module.scss
@@ -15,6 +15,7 @@
   width: 250px;
   height: 100%;
   background-color: var(--main-color);
+  color: white;
 
   transition: 0.5s ease;
   z-index: 999;
@@ -22,4 +23,5 @@
 
 .sidebarClosed {
   left: -250px;
+  color: var(--main-color);
 }
